Utilisation de docker pour le frontend

--- a/submission/20-frontend.yaml
+++ b/submission/20-frontend.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: localregistry.lc:30500/frontend:submission
+          image: docker.io/lamine2002/frontend:submission
           imagePullPolicy: Always
           ports:
             - containerPort: 80
