--- a/submission/30-api-gateway.yaml
+++ b/submission/30-api-gateway.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: api-gateway
-          image: localregistry.lc:30500/api-gateway:submission
+          image: docker.io/lamine2002/api-gateway:submission
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
