--- a/submission/83-monitoring-ingress.yaml
+++ b/submission/83-monitoring-ingress.yaml
@@ -19,15 +19,32 @@ spec:
                 name: grafana
                 port:
                   number: 3000
-          - path: /prometheus
-            pathType: Prefix
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: monitoring-ingress-metrics
+  namespace: monitoring
+  annotations:
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+spec:
+  ingressClassName: nginx
+  tls:
+    - secretName: monitoring-tls
+  rules:
+    - http:
+        paths:
+          - path: /prometheus(/|$)(.*)
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: prometheus
                 port:
                   number: 9090
-          - path: /loki
-            pathType: Prefix
+          - path: /loki(/|$)(.*)
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: loki
